--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -31,10 +31,7 @@ jobs:
       - name: Install project dependencies
         run: |
           uv sync --dev
-
-      - name: Install pytest explicitly
-        run: |
-          uv pip install pytest
+          uv pip install -e .[dev]
 
       - name: Run main project tests
         run: |
@@ -66,6 +63,8 @@ jobs:
         run: |
           # First, install main project's dependencies to ensure py-ballisticcalc is available for metadata check
           uv sync --dev
+          uv pip install -e .[dev]
+          cd py-ballisticcalc
           echo "pybc_version=$(python -c 'from importlib.metadata import metadata; print(metadata("py-ballisticcalc")["Version"])')" >> "$GITHUB_OUTPUT"
         id: get_installed_version
         shell: bash
@@ -75,22 +74,11 @@ jobs:
           # Access the version obtained from the previous step's output
           PYBC_VERSION="${{ steps.get_installed_version.outputs.pybc_version }}"
           echo "Cloning py-ballisticcalc with tag: v$PYBC_VERSION"
-          git clone --branch "v$PYBC_VERSION" --single-branch https://github.com/o-murphy/py-ballisticcalc.git py-ballisticcalc_repo
+          git clone --branch "v$PYBC_VERSION" --single-branch https://github.com/o-murphy/py-ballisticcalc.git py-ballisticcalc
         shell: bash
 
-      - name: Install py-ballisticcalc dependencies
+      - name: Run py-ballisticcalc tests with --engine=RKballistic
         run: |
-          cd py-ballisticcalc_repo
-          uv sync --dev # Assuming py-ballisticcalc also uses uv and has a dev dependency group
-
-      - name: Install pytest explicitly for py-ballisticcalc
-        run: |
-          cd py-ballisticcalc_repo
-          uv pip install pytest
-        shell: bash
-
-      - name: Run py-ballisticcalc tests with --engine RKballistic
-        run: |
-          cd py-ballisticcalc_repo
-          python -m pytest ./tests -v --engine RKballistic
+          cd py-ballisticcalc
+          pytest ./tests -v --engine=RKballistic
         shell: bash
